New checkmark styles

--- a/src/checkbox_and_radio/animateSVGCheckmark/styles.css
+++ b/src/checkbox_and_radio/animateSVGCheckmark/styles.css
@@ -57,11 +57,11 @@ body {
 }
 
 .check:hover svg {
-    stroke: #4285f4;
+    stroke: #20D432;
 }
 
 #animate:checked + .check svg {
-    stroke: #4285f4;
+    stroke: #20D432;
 }
 
 #animate:checked + .check svg path {
